0027931: Coding rules, Precision.hxx - eliminate dead code within PRECISION_OBSOLETE macros